fix: date should not be aligned center

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -129,7 +129,7 @@
         font-size: 0.65em;
     }
     .post-meta {
-        text-align: center;
+
     }
 }
 
